<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.shanmudi.checkgasprice.MainActivity"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_weight="0.55"
        android:layout_above="@+id/UpdateTimeText">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:text="@string/_680news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/_680news_gas_price"
                android:id="@+id/News680_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/enpro_news"
                android:id="@+id/News680_2"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/more_news"
                android:id="@+id/Future"
                android:layout_marginTop="5dp"
                android:layout_weight="0.10" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/gas_predictor"
                android:id="@+id/GasPTitle"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/more_news"
                android:id="@+id/GasPDate"
                android:layout_weight="0.10" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/more_news"
                android:id="@+id/GasPTrend"
                android:layout_weight="0.10" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/more_news"
                android:id="@+id/GasPTrend23"
                android:layout_weight="0.10" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/more_news"
                android:id="@+id/GasPRecommend"
                android:layout_weight="0.10" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/petro_canada_1525_markham_road"
                android:id="@+id/textView3"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/markham_gas_price"
                android:id="@+id/GasMarkham" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/petro_canada_5110_sheppard_ave_e"
                android:id="@+id/textView2"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/markham_amp_sheppard"
                android:id="@+id/GasSheppard"
                android:layout_weight="0.05" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/petro_canada_2250_victoria_park_ave"
                android:id="@+id/textView"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/victoria_park_gas_price"
                android:id="@+id/GasVictoria"
                android:layout_weight="0.05" />

        </LinearLayout>
    </ScrollView>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:text="@string/refresh"
        android:id="@+id/RefreshButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/UpdateTimeText"
        android:layout_above="@+id/RefreshButton"
        android:layout_alignParentStart="true" />


</RelativeLayout>
